fix message entity and implement ultimante api service

--- a/.env-sample
+++ b/.env-sample
@@ -1,9 +1,12 @@
 ## APP
 NODE_ENV=development
 APP_PORT=3000
-APP_NAME=api
+APP_NAME=Ultimate-Api
 APP_HOST=https://localhost:3000
 APP_DESCRIPTION="Api Nestjs Boilerplate"
+ULTIMATE_BOT_ID=5f74865056d7bb000fcd39ff
+ULTIMATE_APIKEY=825765d4-7f8d-4d83-bb03-9d45ac9c27c0
+ULTIMATE_HOST=https://chat.ultimate.ai/api/intents
 
 ## MONGO
 MONGO_HOST=mongo
