--- a/.env-sample
+++ b/.env-sample
@@ -4,9 +4,9 @@ APP_PORT=3000
 APP_NAME=Ultimate-Api
 APP_HOST=https://localhost:3000
 APP_DESCRIPTION="Api Nestjs Boilerplate"
-ULTIMATE_BOT_ID=5f74865056d7bb000fcd39ff
-ULTIMATE_APIKEY=825765d4-7f8d-4d83-bb03-9d45ac9c27c0
-ULTIMATE_HOST=https://chat.ultimate.ai/api/intents
+ULTIMATE_BOT_ID=
+ULTIMATE_APIKEY=
+ULTIMATE_HOST=
 
 ## MONGO
 MONGO_HOST=mongo
